      When wrapping words in boxes, hypenate very long words if needed to fit
       the available space.
       (issue #59)
      Fix assertion if ... is placed on the same line as another arc, but
       after the arc has been specified.
      Fix regression where blank lines at the start of input would be
       rejected and parsing stopped.
       (Thanks Bernhard for the report and example)

0.19: 01/01/2011
      Configure script changes to be more thorough about gdlib and FreeType
       detection.  Also correct problems in configuring for Win32 native.
      Inprove RPM packaging compliance with Fedora packaging guidelines.
      Further gdlib anti-alising workarounds.
      Correct canvas height computation when last arc(s) skip (issue #46).
      Allow input quoted strings to span multiple lines e.g.
         a->b [label="line1
                      line1 too!"];
       (issue #45)
      Add gtksourceview syntax highlighting grammar installed in docs
       (Thanks to NThykier for adding this, issue #51).
      Improve error message output by showing line which caused the problem
       and detect possible parse error due to mis-handling of x- in some
       cases and print helpful note (issue #53).
      Parse UTF-8 byte order mark and print a warning if parsing UTF-8 to
       generate a PNG when configured without FreeType.  Otherwise ignore
       the BOM (issue #7).
      Add support for 'note' arcs which draw a box with the corner turned down.
      Enable box arc names to be in upper or lower case in the input file.
      Add word wrapping for arc labels in boxes.  Wrapping for all arc labels
       can also be enabled with the new "wordwraparcs" msc attribute.
       (issue #45)
      Fix rendering of different sized boxes when using parallel arcs.
       (issue #50)
      Improve background to boxes to make it correctly fit abox, rbox
       and note types.
      Improve rounded corners in SVG output.
      Improve vertical layout.