@@ -479,7 +479,10 @@ Boolean PsClose(struct ADrawTag *ctx)
     PsContext *context = getPsCtx(ctx);
 
     /* Close the output file */
-    fclose(context->of);
+    if(context->of != stdout)
+    {
+        fclose(context->of);
+    }
 
     /* Free and destroy context */
     free(context);
@@ -505,11 +508,18 @@ Boolean PsInit(unsigned int     w,
     }
 
     /* Open the output file */
-    context->of = fopen(file, "wb");
-    if(!context->of)
+    if(strcmp(file, "-") == 0)
     {
-        fprintf(stderr, "PsInit: Failed to open output file '%s': %s\n", file, strerror(errno));
-        return FALSE;
+        context->of = stdout;
+    }
+    else
+    {
+        context->of = fopen(file, "wb");
+        if(!context->of)
+        {
+            fprintf(stderr, "PsInit: Failed to open output file '%s': %s\n", file, strerror(errno));
+            return FALSE;
+        }
     }
 
     /* Write the header */
