@@ -59,7 +59,8 @@ void Usage(void)
 "              command line.\n"
 " -o <file>   Write output to the named file.  This option must be specified if \n"
 "              input is taken from stdin, otherwise the output filename\n"
-"              defaults to <infile>.<type>.\n"
+"              defaults to <infile>.<type>.  This may also be specified as '\-'\n"
+"              to write output directly to stdout.\n"
 #ifdef USE_FREETYPE
 " -F <font>   Use specified font for PNG output.  This must be a font specifier\n"
 "              compatbile with fontconfig (see 'fc-list'), and overrides the\n"
